syntax = "proto3";

import "ulid.proto";
import "timestamp.proto";
import "label.proto";

package pb;

message FlowStream {
  ULID flow_id = 1;
  ULID hub_id = 2;
  ULID agent_id = 3;
  ULID service_id = 4;
  ULID account_id = 5;
  LabelSet labels = 6;

  Timestamp started_at = 10;
  Timestamp ended_at = 11;

  int64 num_messages = 12;
  int64 num_bytes = 13;
}

message FlowRecord {
  message AgentConnection {
    ULID hub_id = 1;
    ULID agent_id = 2;
    ULID account_id = 3;

    Timestamp started_at = 10;
    Timestamp ended_at = 11;

    int32 num_services = 12;
    int64 active_streams = 13;
  }

  AgentConnection agent = 1;

  FlowStream stream = 2;

/*
  ULIDWithDuration id = 1;
  ULID hub_id = 2;
  ULID agent_id = 3;

  ULID service_id = 10;
  string service_type = 11;

  bytes source_ip = 20;
  int64 num_packets = 21;
  int64 num_bytes = 22;

  // Stats for a hub itself
  int64 connected_agents = 30;
  int64 total_messages = 31;
  int64 total_bytes = 32;
  Timestamp start_time = 33;

  // Stats for an agent connection
*/
}

message FlowTopSnapshot {
  repeated FlowStream records = 1;
}

message FlowTopRequest {
  int32 max_records = 1;
}

service FlowTopReporter {
  rpc CurrentFlowTop(FlowTopRequest) returns (FlowTopSnapshot) {}
}
